add public dir and assets

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <meta name="theme-color" content="#1f2937" />
+    <meta
+      name="description"
+      content="We're here to answer the eternal question: What Pokémon is roundest?"
+    />
+
+    <link rel="shortcut icon" type="image/ico" href="/src/favicon.ico" />
+    <title>Roundest Pokémon - Public Poll</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
