--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="We're here to answer the eternal question: What Pokémon is roundest?"
     />
 
-    <link rel="shortcut icon" type="image/ico" href="/src/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <title>Roundest Pokémon - Public Poll</title>
   </head>
   <body>
